--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,27 +3,30 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: mcr.microsoft.com/windows/nanoserver:1809
+      - image: cimg/python:3.11
 
     steps:
       - checkout
 
       - run:
-          name: Install Python and dependencies
+          name: Install dependencies
           command: |
-            choco install -y python3
-            refreshenv
-            pip install pyinstaller
+            sudo apt-get update
+            sudo apt-get install -y python3-pip
+            pip3 install pyinstaller
+            pip3 install -r requirements.txt
 
       - run:
           name: Build .exe
           command: |
-            pyinstaller --noconfirm --onefile --windowed --icon ".\dnsed\assets\app.ico" --name "DNSed" --add-data ".\dnsed\assets;assets/"  ".\dnsed\main.py"
+            pyinstaller --noconfirm --onefile --windowed --icon="./dnsed/assets/app.ico" --name="DNSed" --add-data="./dnsed/assets:assets/"  "./dnsed/main.py"
+            ls
+            ls -la dist
 
-      - persist_to_workspace:
-          root: .
-          paths:
-            - dist/
+      - store_artifacts:
+          path: dist/
+
+
 
 workflows:
   version: 2
